Added some stuff, changed some stuff, didn't test anything.
git-svn-id: http://xsd.alexandriaconsulting.com/repos/trunk/synthesis@341 8fca1ad0-7d11-0410-afd2-b43cb0f742c7