@@ -1,11 +1,16 @@
 Requirements:
     Java JDK 1.6                                http://java.sun.com
     Grails 1.1.1 (or presumably more recent)    http://www.grails.org
+    tomcat6                                     if you want to deploy under a web container (apt-get install tomcat6)
 
-The grails distribution includes all libraries required to create and run the application.  Place
-${GRAILS_HOME}/bin in your PATH.
+The grails distribution includes all libraries required to create and run the application.  Set GRAILS_HOME in
+your login script and place {GRAILS_HOME}/bin in your PATH.
 
-Running the app simple version:
+Before running the app, please edit grails-app/conf/DataSource.groovy to point to the appropriate URL for
+the database to which you want to connect for "development" and "production" deployments.  
+
+Running the app simple version/development mode:
+    $ cd synthesis/webservices
     $ grails run-app
 
 This will use grails to host the web application in "development" mode and start a web listener on port 8080.
@@ -26,8 +31,9 @@ So for example to view the "person" action on the "xml" controller, you would vi
 
     http://localhost:8080/synthesis/xml/person
 
-Running the app, deploy version:
+Running the app, production deployment version:
 
+    $ cd synthesis/webservices
     $ grails war
 
 This will build a standard and complete war file that can be deployed into any container that supports deployment
@@ -37,7 +43,34 @@ and will be named:
     ${application_name}-${application_version}.war
 
 The name and version again can be found in application.properties and can be updated as appropriate with no
-impact on the application functionality.
+impact on the application functionality.  When the war container deploys and starts running the app, it will
+be running in "production" mode, the main consideration being the URL defined under grails-app/conf/DataSource.groovy
+for the production database versus the development database as referred to above.
+
+*** <VERY IMPORTANT NOTE> ***
+
+On Debian-based systems (including Ubuntu) you absolutely must disable the Java security manager in
+the /etc/init.d/tomcat6 file:
+
+    # Use the Java security manager? (yes/no)
+    # TOMCAT6_SECURITY=yes
+    TOMCAT6_SECURITY=no
+
+Unless you want to spend a LOT of tedious and unnecessary time tweaking Java security profile cofigurations.
+
+You should also make the following changes:
+
+    if [ -z "$JAVA_OPTS" ]; then
+            JAVA_OPTS="-Djava.awt.headless=true -Xms64M -Xmx256M -XX:MaxPermSize=128M"
+    fi
+
+to increase the amount of memory tomcat will use for the app.  -Xmx is the total amount of heap memory tomcat
+will allocate for the application and can be increased even further if OutOfMemoryException are encountered.
+
+Once you have made these changes, you may drop the war into /var/lib/tomcat6/webapps and it should deploy and
+execute without any problems.
+
+*** </VERY IMPORTANT NOTE> ***
 
 Important parts of the directory structure
 
@@ -52,9 +85,10 @@ Important parts of the directory structure
         /utils          Utility classes for the grails application
         /views          View templates for controller actions
     /lib                Any other external libraries needed to run the app not included with base grails
-    /scripts            Scripts I've created to test xml functionaliry
+    /scripts            Scripts I've created to test xml functionality/aka half-assed attempt at unit tests
     /src                External sources (there's no real distinction in my mind why this would be here
-                        versus placing extra code under /services or /utils above)
+                        versus placing extra code under /services or /utils above.  There is probably some
+                        convention in grails to distinguish of which I am still unaware.)
     /test               Unit and Integration tests (sadly empty at the moment)
     /web-app            Static files that are part of the web application
 
@@ -67,7 +101,9 @@ If you panic, there are several resources available:
 There are a number of good groovy and grails books available as well.  "Groovy Recipes", "Programming Groovy"
 and "Grails in Action" are highly recommended.
 
-NOTE: One of the downsides of a grails application is that (unlike some ORM systems) the properties of the domain
+** ANOTHER IMPORTANT NOTE
+
+One of the downsides of a grails application is that (unlike some ORM systems) the properties of the domain
 objects need to be manually kept in sync with the database.  If the database schema changes, the domain objects
 will need to be updated to reflect those changes.
 
